fixed alignment of image issue

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ ul a {
 .content {
   margin-top: 40px;
   display: flex;
+  align-items: center;
 gap: 200px;
  margin-left: 40px;
  margin-bottom: 100px;
